--- a/app/assets/stylesheets/metro.less
+++ b/app/assets/stylesheets/metro.less
@@ -1,4 +1,6 @@
-.custom-design {
-    color: red;
-    font-size: 35px;
+#metro {
+    .custom-design {
+        color: red;
+        font-size: 35px;
+    }
 }
