--- a/app/views/metro/index.html.erb
+++ b/app/views/metro/index.html.erb
@@ -1,16 +1,18 @@
-<div class='container'>
-    <div class='row'>
-        <div class='col-sm-12'>
-            <h1>Metro#index</h1>
-        </div>
-        <div class='col-sm-4'>
-            <p>First content</p>
-        </div>
-        <div class='col-sm-4'>
-            <p>Second content</p>
-        </div>
-        <div class='col-sm-4 custom-design'>
-            <p>Third content</p>
+<div id='metro'>
+    <div class='container'>
+        <div class='row'>
+            <div class='col-sm-12'>
+                <h1>Metro#index</h1>
+            </div>
+            <div class='col-sm-4'>
+                <p>First content</p>
+            </div>
+            <div class='col-sm-4'>
+                <p>Second content</p>
+            </div>
+            <div class='col-sm-4 custom-design'>
+                <p>Third content</p>
+            </div>
         </div>
     </div>
 </div>
