--- a/app/views/metro/index.html.erb
+++ b/app/views/metro/index.html.erb
@@ -11,7 +11,7 @@
                 <p>Second content</p>
             </div>
             <div class='col-sm-4 custom-design'>
-                <p>Third content</p>
+                <p>Third content.</p>
             </div>
         </div>
     </div>
