Add all article appropriate files

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,5 +2,6 @@
     <div class="container">
         <h1>Welcome#index</h1>
         <%= link_to "Metro", metro_path, id: "metroId", class: "metroClass" %>
+        <%= link_to 'Articles', controller: 'articles' %>
     </div>
 </div>
