Welcome to my sample site

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 
-<div id="article" raclass="container">
+<div id="article" class="container">
   <h1>Listing articles</h1>
   
   <%= link_to 'New article', new_article_path %>
@@ -22,4 +22,4 @@
       </tr>
     <% end %>
   </table>
-  </div>
+</div>
