--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div id="article" class="container">
     <p>
         <strong>Title:</strong>
         <%= @article.title %>
