--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,6 @@
+<%# For more info
+gem "twitter-bootstrap-rails" %>
+
 <%= nav_bar static: :top  do%> 
     <%= menu_group do %>
         <%= menu_item "Home", '/' %>
