--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,5 @@
-<div id="welcome">
-    <div class="container">
-        <h1>Welcome to my Sample Site</h1>
-        <%# <%= link_to "Metro", metro_path, id: "metroId", class: "metroClass" %>
-        <%# <%= link_to 'Articles', controller: 'articles' %> %> %>
-    </div>
+<div id="welcome" class="container">
+    <h1>Welcome to my Sample Site</h1>
+    <%# <%= link_to "Metro", metro_path, id: "metroId", class: "metroClass" %>
+    <%# <%= link_to 'Articles', controller: 'articles' %> 
 </div>
