--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -19,6 +19,10 @@
 //
 // Example:
 // @link-color: #ff0000;
+//Resources
+//https://work.smarchal.com/twbscolor/
+//https://www.bootstrap-live-customizer.com/
+//http://colormind.io/template/paper-dashboard/
 @bgDefault      : #9b59b6;
 @bgHighlight    : #8e44ad;
 @colDefault     : #ecf0f1;
